CMAKE_MINIMUM_REQUIRED(VERSION 3.5)
PROJECT(ClienCerverEnc
	VERSION 0.0.1)

FIND_PACKAGE(Boost 1.40 COMPONENTS system REQUIRED)
FIND_PACKAGE(Threads REQUIRED)
INCLUDE_DIRECTORIES(${Boost_INCLUDE_DIR})

SET(CMAKE_CXX_STANDARD 17)

file(GLOB_RECURSE SOURCE_FILES source/src/Server/*.cpp)

ADD_EXECUTABLE(Server Server.cpp ${SOURCE_FILES})
TARGET_LINK_LIBRARIES(Server PRIVATE Threads::Threads ${Boost_LIBRARIES})
TARGET_INCLUDE_DIRECTORIES(Server PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/source/include/Server)

file(GLOB_RECURSE SOURCE_FILES1 source/src/Client/*.cpp)

ADD_EXECUTABLE(Client Client.cpp ${SOURCE_FILES1})
TARGET_LINK_LIBRARIES(Client PRIVATE Threads::Threads ${Boost_LIBRARIES})
TARGET_INCLUDE_DIRECTORIES(Client PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/source/include/Client)


